<resources>
    <string name="app_name">Quyawar</string>
    <string name="action_edit_profile">Edit profile</string>
    <string name="title_activity_login">Sign in</string>

    <string name="welcome_message">Bienvenido!</string>
    <string name="welcome_message2">Está a un paso de salvar vidas. Gracias por ayudar</string>
    <string name="welcome_button">Ingresar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (required)</string>
    <string name="prompt_register_email">Register email</string>
    <string name="prompt_register_password">Register password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Register new user</string>
    <string name="action_sign_out">Close session</string>
    <string name="action_terms_conditions">Terms and conditions</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_add_camp">Add campaign</string>
    <string name="title_see_campaign">See campaigns</string>
    <string name="title_my_donations">My donations</string>
    <string name="title_edit_profile">Edit profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello, i am a blank fragment</string>
    <string name="add_camp_titulo">Rótulo campaña</string>
    <string name="add_camp_tiposangre">Tipo de sangre</string>
    <string name="add_camp_paciente">¿A quien se dona?</string>


    <!-- fragment add campaña -->
    <string-array name="blood_type_array">
        <item>A+</item>
        <item>A-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="title_activity_otra">OtraActivity</string>
    <string name="title_activity_register_user">Register User</string>
    <string name="title_activity_new_campaign">New Campaign</string>
    <string name="title_activity_campaigns">Campaigns Actives</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_donations">My donations</string>
    <string name="title_activity_locals">Locals</string>
    <string name="title_activity_terms_conditions">Terms &amp; Conditions</string>
    <string name="title_activity_campaign">CampaignActivity</string>
    <string name="title_activity_maps">Location Map</string>


    <string name="maps_api_key">AIzaSyANlI-96bxcJzsgoktX6MC2AfGd6qUr8L0</string>
    <string name="title_activity_local_sede">LocalSedeActivity</string>

</resources>
